--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8b135c2b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8e013caf",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "116ff0cc",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "7.658405703368252"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b134c97b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x17d5d0918e0>"
+       "<matplotlib.legend.Legend at 0x23cc1f7a570>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -129,32 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "00c1d619",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.247587216844331"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = lr.predict(X_val)\n",
-    "\n",
-    "root_mean_squared_error(y_val, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f9e6479e",
    "metadata": {},
    "outputs": [],
@@ -183,10 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8029eba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "duration std before removing outliers ../data/yellow_tripdata_2023-01.parquet 42.59435124195458\n",
+      "duration std before removing outliers ../data/yellow_tripdata_2023-02.parquet 42.84210176105113\n"
+     ]
+    }
+   ],
    "source": [
     "df_train = read_dataframe(data_paths[0])\n",
     "df_val = read_dataframe(data_paths[1])"
@@ -194,33 +178,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "06c497a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9812202822125979\n"
+     ]
+    }
+   ],
    "source": [
-    "# len(pd.read_parquet(data_paths[0]).columns) # A1. 19\n",
+    "len(pd.read_parquet(data_paths[0]).columns) # A1. 19\n",
     "# # print(df.duration.std()) inside read func before removing outliers # A2. 59\n",
-    "# print(len(df_train) / len(pd.read_parquet(data_paths[0]))) # A3. 98%"
+    "print(len(df_train) / len(pd.read_parquet(data_paths[0]))) # A3. 98%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "0dce9d07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3009173, 515)\n"
+     ]
+    }
+   ],
    "source": [
     "train_feat = df_train[['PULocationID', 'DOLocationID']] # [:10]\n",
     "train_feat_dict = train_feat.to_dict(orient='records')\n",
     "dv_train = DictVectorizer()\n",
     "dv_train_feat = dv_train.fit_transform(train_feat_dict)\n",
-    "# dv_train.shape # A4. 515"
+    "print(dv_train_feat.columns.shape) # A4. 515"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "65abed25",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "564a8d11",
    "metadata": {},
    "outputs": [
